Fix repo buttons overflowing
- Don't show SVG(major cause for taking up space and being shown as
"column").
- Allow it to be a new columnif the number is too big.

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -2965,8 +2965,11 @@ tbody.commit-list {
 }
 
 .repo-buttons {
-  display: flex;
   align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  word-break: keep-all;
 
   @media @mediaSm {
     margin-top: 1em;
@@ -3009,6 +3012,11 @@ tbody.commit-list {
 
     > .button {
       pointer-events: none !important;
+    }
+  }
+  @media @mediaSm {
+    .svg {
+      display: none;
     }
   }
 }
